--- a/mix.html
+++ b/mix.html
@@ -1,74 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Primary Meta Tags -->
-<title>Mixshow Database</title>
-<meta name="title" content="Mixshow Database">
-<meta name="description" content="The database for all radio station mixshows to listen to all in one place!">
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://asherr.org/">
-<meta property="og:title" content="Mixshow Database">
-<meta property="og:description" content="The database for all radio station mixshows to listen to all in one place!">
-<meta property="og:image" content="https://asherr.org/DJ.png">
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://asherr.org/">
-<meta property="twitter:title" content="Mixshow Database">
-<meta property="twitter:description" content="The database for all radio station mixshows to listen to all in one place!">
-<meta property="twitter:image" content="https://asherr.org/DJ.png">
-<body style="background-color:black;">
-  <h2 style="text-align: center;">
-    <span style="text-decoration: underline; color: #ffffff;">
-      <strong>The Mixshow Database</strong>
-    </span>
-  </h2>
-  <hr />
-  <h4 style="text-align: center;">
-    <span style="color: #ffffff;">Index</span>
-  </h4>
-  <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/q102.html">Q102's Stream</a>
-    </span>
-  </p>
-  <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/europe.html">Europe Mixshows</a>
-    </span>
-    </p>
-  <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/usa.html">USA Mixshows</a>
-    </span>
-    </p>
-  <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/x1071.html">X107.1's Stream</a>
-    </span>
-  </p>
-  <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/radio1hu.html">Radio 1 (Hungary)</a>
-    </span>
-    </p>
-  <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/main">All Streams</a>
-    </span>
-    </p>
-    <p style="text-align: center;">
-    <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/schedule.html">Schedule</a>
-    </span>
-    </p>
-    <div style="display: flex; justify-content: center; align-items: flex-end; height: 10vh;">
-  <p style="text-align: center;">
-    <span style="color: #3366ff; font-size: 25px; font-weight: bold;">
-      <a style="color: #3366ff; text-decoration: none;" href="https://asherr.org/">Back to asherr.org</a>
-    </span>
-  </p>
-</div>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=https://youtube.com/ashman887">
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+        // Backup redirection for browsers that do not support meta refresh
+        setTimeout(function() {
+            window.location.href = "https://mix.asherr.org";
+        }, 0);
+    </script>
+</head>
+<body>
+    <p>If you are not redirected automatically, follow this <a href="mix.asherr.org">link to YouTube</a>.</p>
+</body>
+</html>
