--- a/mix.html
+++ b/mix.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://youtube.com/ashman887">
+    <meta http-equiv="refresh" content="0; url=https://mix.asherr.org">
     <title>Redirecting...</title>
     <script type="text/javascript">
         // Backup redirection for browsers that do not support meta refresh
@@ -12,6 +12,6 @@
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="mix.asherr.org">link to YouTube</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="mix.asherr.org">link.</a>.</p>
 </body>
 </html>
