--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
     <div class="menu-items">
       <a href="https://asherr.org/coverage">Coverage Maps</a>
-      <a href="https://asherr.org/mix">Mixshows</a>
+      <a href="https://mix.asherr.org">Mixshows</a>
       <a href="https://asherr.org/rdsdb">RDS Decode 1 - Database</a>
       <a href="https://asherr.org/callsignlookup">RDS Callsign Lookup - Database</a>
       <a href="https://asherr.org/rds">RDS Decode 2</a>
