--- a/patownships/index.html
+++ b/patownships/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PA Township Tracker</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -17,7 +18,7 @@
     }
   </style>
 
-  <!-- Leaflet.js CSS -->
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 
@@ -25,12 +26,23 @@
 
 <h1>PA Township Tracker</h1>
 <p id="township">Finding your township...</p>
+<p id="progress"></p>
 <div id="map"></div>
 
-<!-- Leaflet.js JS -->
+<!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <script>
+
+let map;
+let yourTownshipName = '';
+let visitedTownships = new Set();
+
+// Load saved visited townships
+if (localStorage.getItem('visitedTownships')) {
+  visitedTownships = new Set(JSON.parse(localStorage.getItem('visitedTownships')));
+}
+
 function init() {
   if (!navigator.geolocation) {
     document.getElementById('township').textContent = 'Geolocation is not supported by your browser.';
@@ -44,40 +56,44 @@ function success(position) {
   const latitude = position.coords.latitude;
   const longitude = position.coords.longitude;
 
-  // Show map
-  var map = L.map('map').setView([latitude, longitude], 13);
+  // Initialize map
+  map = L.map('map').setView([latitude, longitude], 13);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; OpenStreetMap contributors'
   }).addTo(map);
 
+  // Add your location marker
   L.marker([latitude, longitude]).addTo(map)
     .bindPopup('You are here.')
     .openPopup();
 
-  // Get township name
+  // Reverse geocode to find township
   fetch(`https://nominatim.openstreetmap.org/reverse?lat=${latitude}&lon=${longitude}&format=json&zoom=12`)
     .then(response => response.json())
     .then(data => {
-      let townshipName = '';
-
       if (data.address) {
         if (data.address.town) {
-          townshipName = data.address.town;
+          yourTownshipName = data.address.town;
         } else if (data.address.village) {
-          townshipName = data.address.village;
+          yourTownshipName = data.address.village;
         } else if (data.address.city) {
-          townshipName = data.address.city;
+          yourTownshipName = data.address.city;
         } else if (data.address.hamlet) {
-          townshipName = data.address.hamlet;
+          yourTownshipName = data.address.hamlet;
         } else if (data.address.county) {
-          townshipName = data.address.county + ' County';
+          yourTownshipName = data.address.county + ' County';
         } else {
-          townshipName = 'Unknown Township';
+          yourTownshipName = 'Unknown Township';
         }
       }
+      document.getElementById('township').textContent = 'You are currently in: ' + yourTownshipName;
 
-      document.getElementById('township').textContent = 'You are currently in: ' + townshipName;
+      // Save this township to visited list
+      visitedTownships.add(yourTownshipName);
+      localStorage.setItem('visitedTownships', JSON.stringify(Array.from(visitedTownships)));
+
+      loadTownships(); // Now load GeoJSON and draw boundaries
     })
     .catch(() => {
       document.getElementById('township').textContent = 'Unable to determine township.';
@@ -88,7 +104,40 @@ function error() {
   document.getElementById('township').textContent = 'Unable to retrieve your location.';
 }
 
+function loadTownships() {
+  fetch('townships.geojson')
+    .then(response => response.json())
+    .then(geojsonData => {
+      let totalTownships = geojsonData.features.length;
+
+      L.geoJSON(geojsonData, {
+        style: function(feature) {
+          let name = feature.properties.NAME;
+          if (name === yourTownshipName) {
+            // You are here - highlight it red
+            return { color: "red", weight: 2, fillOpacity: 0.3 };
+          } else if (visitedTownships.has(name)) {
+            // Previously visited - highlight it green
+            return { color: "green", weight: 1, fillOpacity: 0.2 };
+          } else {
+            // Default style
+            return { color: "blue", weight: 1, fillOpacity: 0.05 };
+          }
+        },
+        onEachFeature: function (feature, layer) {
+          if (feature.properties.NAME) {
+            layer.bindPopup(feature.properties.NAME);
+          }
+        }
+      }).addTo(map);
+
+      // Update progress
+      document.getElementById('progress').textContent = `Visited ${visitedTownships.size} out of ${totalTownships} municipalities`;
+    });
+}
+
 init();
+
 </script>
 
 </body>
