--- a/patownships/index.html
+++ b/patownships/index.html
@@ -1,124 +1,191 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Current Township Tracker</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <title>Municipality Tracker</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet/dist/leaflet.css"
+  />
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
-    #info { padding: 10px; font-size: 20px; background: #f0f0f0; text-align: center; }
-    #map { height: 80vh; width: 100%; }
-    #visited { padding: 10px; background: #fafafa; font-size: 16px; }
-    #visited ul { list-style: none; padding: 0; margin: 0; }
-    #visited li { margin-bottom: 5px; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #eee;
+    }
+    #info {
+      padding: 10px;
+      font-size: 20px;
+      background: #222;
+      text-align: center;
+    }
+    #map {
+      height: 70vh;
+      width: 100%;
+    }
+    #update-time {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #222;
+      color: #eee;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+    }
+    #visited {
+      padding: 10px;
+      background: #181818;
+      font-size: 16px;
+    }
+    #visited ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    #visited li {
+      margin-bottom: 5px;
+    }
+    #controls {
+      padding: 10px;
+      background: #181818;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    button {
+      background-color: #444;
+      color: #eee;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #666;
+    }
   </style>
 </head>
 <body>
+  <div id="info">Loading your location...</div>
+  <div id="map"></div>
+  <div id="update-time">Last Updated: --</div>
+  <div id="controls">
+    <div>
+      <strong>Visited: <span id="visited-count">0</span> / <span id="total-count">0</span> (<span id="visited-percent">0</span>%)</strong>
+    </div>
+    <button id="reset-button">Reset Progress</button>
+  </div>
+  <div id="visited">
+    <strong>Visited Municipalities:</strong>
+    <ul id="visited-list"></ul>
+  </div>
 
-<div id="info">Loading your location...</div>
-<div id="map"></div>
-<div id="visited">
-  <strong>Visited Townships (<span id="visited-count">0</span>):</strong>
-  <ul id="visited-list"></ul>
-</div>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+  <script>
+    const map = L.map('map').setView([40.2732, -76.8867], 8); // Center on Pennsylvania
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; OpenStreetMap contributors & CartoDB',
+      subdomains: 'abcd',
+      maxZoom: 19
+    }).addTo(map);
 
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+    let townshipLayer;
+    let currentHighlight = null;
+    let userMarker = null;
+    let lastTownshipName = null;
+    let visitedTownships = new Set(JSON.parse(localStorage.getItem('visitedTownships') || '[]'));
+    let totalMunicipalities = 0;
 
-<script>
-  const map = L.map('map').setView([40.2732, -76.8867], 8); // Pennsylvania center
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-  }).addTo(map);
-
-  let townshipLayer;
-  let currentHighlight = null;
-  let userMarker = null;
-  let lastTownshipName = null;
-  let visitedTownships = new Set();
-
-  // Load your townships GeoJSON
-  fetch('townships.geojson') // <-- replace with your actual geojson
-    .then(response => response.json())
-    .then(data => {
-      townshipLayer = L.geoJSON(data, {
-        style: {
-          color: "#3388ff",
-          weight: 1,
-          fillOpacity: 0.1
-        },
-        onEachFeature: function (feature, layer) {
-          const name = feature.properties.MUNICIPAL_NAME || "Unknown";
-          layer.bindPopup(name);
-        }
-      }).addTo(map);
-
-      startTracking();
-    });
-
-  function startTracking() {
-    if (!navigator.geolocation) {
-      alert("Geolocation not supported.");
-      return;
-    }
-
-    navigator.geolocation.getCurrentPosition(position => {
-      const lat = position.coords.latitude;
-      const lon = position.coords.longitude;
-      map.setView([lat, lon], 13);
-      updateLocation(position); // First immediate update
-    }, locationError);
-
-    setInterval(() => {
-      navigator.geolocation.getCurrentPosition(updateLocation, locationError);
-    }, 3000);
-  }
-
-  function updateLocation(position) {
-    const lat = position.coords.latitude;
-    const lon = position.coords.longitude;
-
-    // Move the user marker
-    if (userMarker) {
-      userMarker.setLatLng([lat, lon]);
-    } else {
-      userMarker = L.marker([lat, lon]).addTo(map).bindPopup("You are here").openPopup();
-    }
-
-    fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&zoom=10&format=json`)
+    // Load your municipalities GeoJSON
+    fetch('townships.geojson') // <-- replace this with your actual path
       .then(response => response.json())
       .then(data => {
-        const address = data.address;
-        const townshipName = address.town || address.city || address.village || address.hamlet || "Unknown";
-
-        document.getElementById('info').textContent = `Current Township: ${townshipName}`;
-
-        highlightTownship(townshipName);
-        trackVisitedTownship(townshipName);
-      })
-      .catch(err => {
-        console.error('Reverse geocoding error:', err);
-      });
-  }
-
-  function highlightTownship(townshipName) {
-    if (!townshipLayer) return;
-
-    let found = false;
-
-    townshipLayer.eachLayer(function(layer) {
-      const name = layer.feature.properties.MUNICIPAL_NAME;
-      if (name && townshipName && name.toLowerCase().includes(townshipName.toLowerCase())) {
-        found = true;
-
-        if (currentHighlight !== layer) {
-          // Reset previous
-          if (currentHighlight) {
-            townshipLayer.resetStyle(currentHighlight);
+        totalMunicipalities = data.features.length;
+        document.getElementById('total-count').textContent = totalMunicipalities;
+        townshipLayer = L.geoJSON(data, {
+          style: {
+            color: "#3388ff",
+            weight: 1,
+            fillOpacity: 0.1
+          },
+          onEachFeature: function (feature, layer) {
+            const name = feature.properties.MUNICIPAL_NAME || "Unknown";
+            const classOfMunicipality = feature.properties.CLASS_OF_MUNIC || "Unknown Type";
+            layer.bindPopup(`${name} (${classOfMunicipality})`);
           }
+        }).addTo(map);
 
-          // Highlight new
+        populateVisitedList();
+        startTracking();
+      });
+
+    function startTracking() {
+      if (!navigator.geolocation) {
+        alert("Geolocation not supported.");
+        return;
+      }
+
+      navigator.geolocation.getCurrentPosition(position => {
+        const lat = position.coords.latitude;
+        const lon = position.coords.longitude;
+        map.setView([lat, lon], 13);
+        updateLocation(position);
+      }, locationError);
+
+      setInterval(() => {
+        navigator.geolocation.getCurrentPosition(updateLocation, locationError);
+      }, 3000);
+    }
+
+    function updateLocation(position) {
+      const lat = position.coords.latitude;
+      const lon = position.coords.longitude;
+
+      if (userMarker) {
+        userMarker.setLatLng([lat, lon]);
+      } else {
+        userMarker = L.marker([lat, lon]).addTo(map).bindPopup("You are here").openPopup();
+      }
+
+      const now = new Date();
+      document.getElementById('update-time').textContent = "Last Updated: " + now.toLocaleTimeString();
+
+      fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&zoom=10&format=json`)
+        .then(response => response.json())
+        .then(data => {
+          const address = data.address;
+          const townshipName = address.town || address.city || address.village || address.hamlet || "Unknown";
+          const countyName = address.county || "Unknown County";
+
+          document.getElementById('info').textContent = `Current Municipality: ${townshipName} (in ${countyName})`;
+
+          highlightTownship(townshipName);
+          trackVisitedTownship(townshipName);
+        })
+        .catch(err => {
+          console.error('Reverse geocoding error:', err);
+        });
+    }
+
+    function highlightTownship(townshipName) {
+      if (!townshipLayer) return;
+
+      if (currentHighlight) {
+        townshipLayer.resetStyle(currentHighlight);
+        currentHighlight = null;
+      }
+
+      townshipLayer.eachLayer(function(layer) {
+        const muniName = layer.feature.properties.MUNICIPAL_NAME || "";
+
+        const cleanMuni = muniName.replace(/(Township|City|Borough|Municipality|of)/gi, "").trim().toLowerCase();
+        const cleanCurrent = townshipName.replace(/(Township|City|Borough|Municipality|of)/gi, "").trim().toLowerCase();
+
+        if (cleanMuni === cleanCurrent) {
           layer.setStyle({
             color: "red",
             weight: 3,
@@ -126,44 +193,57 @@
           });
           currentHighlight = layer;
 
-          // Zoom only when entering a new township
-          if (name !== lastTownshipName) {
+          if (muniName !== lastTownshipName) {
             map.fitBounds(layer.getBounds(), { maxZoom: 14 });
-            lastTownshipName = name;
+            lastTownshipName = muniName;
           }
 
           layer.openPopup();
         }
+      });
+    }
+
+    function trackVisitedTownship(townshipName) {
+      if (!townshipName || townshipName === "Unknown") return;
+
+      if (!visitedTownships.has(townshipName)) {
+        visitedTownships.add(townshipName);
+        saveVisitedTownships();
+        populateVisitedList();
+      }
+    }
+
+    function populateVisitedList() {
+      const list = document.getElementById('visited-list');
+      list.innerHTML = "";
+
+      visitedTownships.forEach(name => {
+        const li = document.createElement('li');
+        li.textContent = name;
+        list.appendChild(li);
+      });
+
+      document.getElementById('visited-count').textContent = visitedTownships.size;
+      const percent = ((visitedTownships.size / totalMunicipalities) * 100).toFixed(2);
+      document.getElementById('visited-percent').textContent = percent;
+    }
+
+    function saveVisitedTownships() {
+      localStorage.setItem('visitedTownships', JSON.stringify(Array.from(visitedTownships)));
+    }
+
+    function locationError(err) {
+      console.warn(`ERROR(${err.code}): ${err.message}`);
+    }
+
+    // Reset Progress Button
+    document.getElementById('reset-button').addEventListener('click', () => {
+      if (confirm("Are you sure you want to reset your progress?")) {
+        visitedTownships.clear();
+        saveVisitedTownships();
+        populateVisitedList();
       }
     });
-
-    if (!found && currentHighlight) {
-      townshipLayer.resetStyle(currentHighlight);
-      currentHighlight = null;
-    }
-  }
-
-  function trackVisitedTownship(townshipName) {
-    if (!townshipName || townshipName === "Unknown") return;
-    
-    // Only add if it's a new township
-    if (!visitedTownships.has(townshipName)) {
-      visitedTownships.add(townshipName);
-
-      // Update counter
-      document.getElementById('visited-count').textContent = visitedTownships.size;
-
-      // Add to list
-      const li = document.createElement('li');
-      li.textContent = townshipName;
-      document.getElementById('visited-list').appendChild(li);
-    }
-  }
-
-  function locationError(err) {
-    console.warn(`ERROR(${err.code}): ${err.message}`);
-  }
-</script>
-
+  </script>
 </body>
 </html>
